--- a/filme/templates/detalhesfilme.html
+++ b/filme/templates/detalhesfilme.html
@@ -4,11 +4,10 @@
     <h1> Esse é o detalhe do {{ filme }} </h1>
     <p> {{ filme.descricao }} </p>
     <img src="{{ filme.thumb.url }}">
-
     <h2> Episódios </h2>
     <div>
         {% for episodio in filme.episodios.all %}
-            <a href="{% url 'filme:mostrar_eps'  episodio.pk %}"> <h1>Episodio {{forloop.counter}}: {{ episodio.titulo }} </h1> </a>  <!-- Forloop.counter => contador do looping, é como o enumerate -->
+            <a href="{% url 'filme:mostrar_eps' episodio.filme_id episodio.num_ep episodio.pk %}"> <h1>Episodio {{forloop.counter}}: {{ episodio.titulo }} </h1> </a>  <!-- Forloop.counter => contador do looping, é como o enumerate -->
         {% endfor %}
     </div>
     <div>
