--- a/filme/templates/mostrar_eps.html
+++ b/filme/templates/mostrar_eps.html
@@ -6,7 +6,7 @@
 <div class="w-12/12 flex flex-nowrap justify-center">
     <div class="mr-7 px-5"> <h1 class="title"> {{episodio.titulo}} </h1> </div>
     <div class="mr-1 px-5"> Visualizações: {{episodio.visualizacoes_ep}} </div>
-    <div class="mr-5 px-5"> <a href="/filmes/filme={{episodio.filme.id}}"><button class="button bg-red-600 text-white px-3 rounded-md"> Voltar ao {{episodio.filme.titulo}} </button> </a> </div>
+    <div class="mr-5 px-5"> <a href="{% url 'filme:detalhesfilme' episodio.filme_id %}"><button class="button bg-red-600 text-white px-3 rounded-md"> Voltar ao {{episodio.filme.titulo}} </button> </a> </div>
 </div>
 <style>
     .video{
